# github_action_test

./: pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  git-pr-release.erb
.github/actions/avro/install/: action.yaml
.github/actions/cue/install/: action.yaml
.github/actions/cue/upload/: action.yaml
.github/actions/gcp/install/: action.yaml
.github/actions/poetry/install/: action.yaml
.github/workflows/: bigquery-schema-migrations-dev.yaml  bigquery-schema-migrations-prod.yaml  cue-dump-dev.yaml  cue-dump-prod.yaml  cue-pkg-dump-dev.yaml  cue-pkg-dump-prod.yaml  javascript.yaml  release.yaml  scaffold_beyond.yaml  scaffold_cloudsql.yaml  scaffold_event_log_router.yaml  scaffold_spanner.yaml  script.yaml
scripts/: avro_tool.cue  cli_tool.cue
scripts/dataplatform_kubernetes/: __init__.py  bq.py  cli.py  cue.py  gh.py  scaffold.py  secretmanager.py  slack.py  util.py  validation.py
scripts/dataplatform_kubernetes/bigquery/: schema_history.py
scripts/resources/scaffold/template/: metadata.cue.jinja2
scripts/resources/scaffold/template/beyond/: common.cue.jinja2  database.cue.jinja2  information_schema.cue.jinja2  metadata.cue.jinja2  parameter.cue.jinja2  workflow_daily.cue.jinja2  workflow_hourly.cue.jinja2
scripts/resources/scaffold/template/cloudsql/: delivery.cue.jinja2  information_schema.cue.jinja2  parameter.cue.jinja2  workflow_daily.cue.jinja2  workflow_hourly.cue.jinja2
scripts/resources/scaffold/template/common/: common.cue.jinja2  delivery.cue.jinja2  semaphore.cue.jinja2
scripts/tests/: test_secret_manager.py  test_slack.py  test_validate.py
scripts/tests/bigquery/: test_schema_history.py
(+9 files in other folders)
